[metadata]
name = IPFS-Toolkit
version = 0.3.2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
python_requires = >=3.6
install_requires =
    setuptools>=42
    wheel
    multiaddr
    appdirs
    idna
    httpcore
    httpx
    requests
